--- a/service.yaml
+++ b/service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: my-service
+  name: todo-service
   labels:
     app: services
 spec:
   selector:
-    app: my-app
+    app: my-todoui
   ports:
     - protocol: TCP
       port: 9898
